fix gaps between blog items

--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -35,6 +35,7 @@ $desktop-width: 1280px;
   align-items: center;
   width: 100%;
   max-width: 405px;
+  margin: 8px;
 
   .blog-item-header {
     &__image {
